# md-html-reader

./: .gitignore  .npmrc  BETA_LIMITATIONS.md  BETA_LIMITATIONS.zh-CN.md  BUG_FIX_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DELIVERY.md  DEVELOPMENT_PLAN.md  FINAL_REPORT.md  GOAL_ACHIEVEMENT.md  LICENSE  M1_SETUP_GUIDE.md  M2_MILKDOWN_GUIDE.md  M3_ANCHOR_GUIDE.md  M4_M5_GUIDE.md  MANUAL_ACCEPTANCE.md  PRIVACY.md  PRIVACY.zh-CN.md  PROGRESS.md  PROJECT_PLAN.md  PROJECT_SUMMARY.md  README.md  README.zh-CN.md  REFACTORING.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TESTING.md  TEST_FINAL_REPORT.md  TRANSLATION_GUIDE.md  comments.html  dev-server.mjs  editor.html  enhanced.html  index-vue.html  index.html  (+18 more)
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: beta-feedback.yml  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml
docs/: manual-acceptance-2026-07-11.md  manual-acceptance-2026-07-12.md
scripts/: build-dmg-headless.sh  prepare-manual-acceptance.sh  run-e2e.mjs  sign-notarize-dmg.sh  smoke-dmg-install.sh
src/: App-vue.vue  App.svelte  App.vue  app.css  i18n.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: browser_preview.rs  comments.rs  fs_handler.rs  html_preview_protocol.rs  main.rs  path_guard.rs  search.rs  translation.rs
src/components/: CommentHighlightOverlay.vue  CommentSidebar.vue  CommentSidebarEnhanced.vue  CommentTooltip.vue  DocumentAssistantPanel.vue  DocumentOutline.vue  FileTree.vue  HtmlRenderer.vue  MarkdownEditor.vue  MilkdownEditor.vue  Preview.svelte  SearchPanel.vue  TranslationCard.vue  YamlEditor.vue
(+28 files in other folders)
