[package]
name = "md-html-reader"
version = "0.2.0"
description = "A Markdown reader with preview, editing, and commenting"
authors = ["peixu7"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
