[package]
name = "md-html-reader"
version = "0.9.0"
description = "A Markdown reader with preview, editing, and commenting"
authors = ["peixu7"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2.4"
pulldown-cmark = "0.13"
hmac = "0.12"
encoding_rs = "0.8"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
e2e = ["tauri-plugin-wdio", "tauri-plugin-wdio-webdriver"]
tauri-plugin-wdio = ["dep:tauri-plugin-wdio"]
tauri-plugin-wdio-webdriver = ["dep:tauri-plugin-wdio-webdriver"]
